--- a/Web/static/css/main.css
+++ b/Web/static/css/main.css
@@ -2850,7 +2850,7 @@ body.article .floating_sidebar, body.article .page_content {
 
 .lagged {
     filter: opacity(0.5);
-    cursor: progress;
+    cursor: not-allowed;
     user-select: none;
 }
 
@@ -2864,7 +2864,7 @@ body.article .floating_sidebar, body.article .page_content {
     pointer-events: none;
 }
 
-.lagged * {
+.lagged *, .lagged {
     pointer-events: none;
 }
 
