Make shuffle and "наушники" buttons work, add f...
avicons when playing audio, save some values (like volume and last played track) to localstorage, add ability to toggle time type in player, fix uploading audios with cover (maybe) and add dragndrop to upload page

--- a/Web/static/css/audios.css
+++ b/Web/static/css/audios.css
@@ -74,7 +74,7 @@
 }
 
 .bigPlayer .paddingLayer .additionalButtons .deviceButton {
-    width: 16px;
+    width: 12px;
     height: 16px;
     background-position: -202px -51px;
     margin-left: 6px;
@@ -82,7 +82,6 @@
 }
 
 .bigPlayer .paddingLayer .playButtons .arrowsButtons {
-    /* скибиди пидорас */
     float: left;
     display: flex;
     padding-left: 4px;
@@ -363,7 +362,7 @@
     text-decoration: underline;
 }
 
-.audioEmbed.withdrawn .status > *, .audioEmbed.withdrawn .playerButton > * {
+.audioEmbed.withdrawn .status > *, .audioEmbed.processed .status > *, .audioEmbed.withdrawn .playerButton > *, .audioEmbed.processed .playerButton > * {
     pointer-events: none;
 }
 
