--- a/Web/static/css/audios.css
+++ b/Web/static/css/audios.css
@@ -4,6 +4,10 @@
     cursor: pointer;
 }
 
+.musicIcon:hover {
+    filter: brightness(99%);
+}
+
 .musicIcon.pressed {
     filter: brightness(150%);
 }
@@ -16,6 +20,13 @@
     height: 46px;
     border-bottom: 1px solid #d8d8d8;
     box-shadow: 1px 0px 8px 0px rgba(34, 60, 80, 0.2);
+}
+
+.bigPlayer.floating {
+    position: fixed;
+    z-index: 199;
+    width: 627px;
+    margin-top: -76px;
 }
 
 .bigPlayer .paddingLayer {
@@ -53,31 +64,50 @@
 .bigPlayer .paddingLayer .additionalButtons {
     float: left;
     margin-top: -6px;
-    width: 12%;
+    width: 11%;
 }
 
 .bigPlayer .paddingLayer .additionalButtons .repeatButton {
-    width: 16px;
+    width: 14px;
     height: 16px;
     background-position-y: -49px;
     background-position-x: -31px;
+    margin-left: 7px;
+    float: left;
+}
+
+.broadcastButton {
+    width: 16px;
+    height: 12px;
+    background-position-y: -50px;
+    background-position-x: -64px;
     margin-left: 6px;
     float: left;
 }
 
+.broadcastButton.atProfile {
+    width: 13px;
+    height: 12px;
+    background-position-y: -50px;
+    background-position-x: -64px;
+    margin-left: 0px !important;
+    margin-right: 5px;
+    float: left;
+}
+
 .bigPlayer .paddingLayer .additionalButtons .shuffleButton {
-    width: 16px;
+    width: 14px;
     height: 16px;
     background-position: -50px -50px;
-    margin-left: 6px;
+    margin-left: 7px;
     float: left;
 }
 
 .bigPlayer .paddingLayer .additionalButtons .deviceButton {
     width: 12px;
     height: 16px;
-    background-position: -202px -51px;
-    margin-left: 6px;
+    background-position: -202px -50px;
+    margin-left: 7px;
     float: left;
 }
 
@@ -92,7 +122,7 @@
     float: left;
     margin-top: -13px;
     margin-left: 13px;
-    width: 386px;
+    width: 63%;
     position: relative;
 }
 
@@ -222,6 +252,7 @@
 .audioEntry.nowPlaying {
     background: #787878;
     border: 1px solid #4f4f4f;
+    box-sizing: border-box;
 }
 
 .audioEntry.nowPlaying:hover {
@@ -244,7 +275,7 @@
     color: white !important;
 }
 
-.audioEntry.nowPlaying .buttons .musicIcon, .audioEntry.nowPlaying svg {
+.audioEntry.nowPlaying .buttons .musicIcon, .audioEntry.nowPlaying .explicitMark {
     filter: brightness(187%) opacity(72%);
 }
 
@@ -257,7 +288,7 @@
 
 .audioEntry .playerButton {
     position: relative;
-    padding: 9px;
+    padding: 10px 9px 9px 9px;
     width: 16px;
     height: 16px;
 }
@@ -309,7 +340,7 @@
     width: 62px;
     height: 20px;
     position: absolute;
-    right: 10%;
+    right: 11%;
     top: 2px;
 }
 
@@ -359,7 +390,7 @@
 
 .audioEmbed .lyrics {
     display: none;
-    padding: 0px 33px;
+    padding: 6px 33px 10px 33px;
 }
 
 .audioEmbed .lyrics.showed {
@@ -384,8 +415,8 @@
 }
 
 .playlistCover img {
-    width: 135px;
-    height: 135px;
+    max-width: 135px;
+    max-height: 135px;
 }
 
 .playlistBlock {
@@ -394,19 +425,27 @@
 
 .playlistContainer {
     display: flex;
+    flex-wrap: wrap;
+    margin-top: -15px;
+    margin-left: -30px;
+}
+
+.playlistContainer .playlistCover {
+    width: 111px;
+    height: 111px;
+    display: flex;
+    background: #c4c4c4;
 }
 
 .playlistContainer  .playlistCover img {
-    width:111px;
-    height:111px;
+    max-width: 111px;
+    max-height: 111px;
+    margin: auto;
 }
 
 .playlistContainer .infObj {
-    margin-left: 15px;
-}
-
-.playlistContainer .infObj:first-of-type {
-    margin-left: 0px;
+    margin-left: 39px;
+    margin-top: 19px;
 }
 
 .ovk-diag-body .searchBox {
@@ -427,7 +466,7 @@
     overflow-y: auto;
 }
 
-.ovk-diag-body .attachAudio {
+.attachAudio {
     float: left;
     width: 28%;
     height: 26px;
@@ -435,11 +474,38 @@
     text-align: center;
 }
 
-.ovk-diag-body .attachAudio span {
+.attachAudio span {
     user-select: none;
 }
 
-.ovk-diag-body .attachAudio:hover {
+.attachAudio:hover {
     background: rgb(236, 236, 236);
     cursor: pointer;
+}
+
+.playlistCover img {
+    cursor: pointer;
+}
+
+.explicitMark {
+    margin-top: 2px;
+    margin-left: 3px;
+    width: 11px;
+    height: 11px;
+    background: url('/assets/packages/static/openvk/img/explicit.svg');
+    background-repeat: no-repeat;
+}
+
+.audioStatus span {
+    color: #2B587A;
+}
+
+.audioStatus span:hover {
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+.audioStatus {
+    padding-top: 2px;
+    padding-bottom: 3px;
 }
