--- a/Web/static/css/audios.css
+++ b/Web/static/css/audios.css
@@ -20,6 +20,7 @@
     height: 46px;
     border-bottom: 1px solid #d8d8d8;
     box-shadow: 1px 0px 8px 0px rgba(34, 60, 80, 0.2);
+    position: relative;
 }
 
 .bigPlayer.floating {
@@ -126,7 +127,7 @@
     position: relative;
 }
 
-.bigPlayer .paddingLayer .trackPanel .track .timeTip {
+.bigPlayer .paddingLayer .bigPlayerTip {
     display: none;
     z-index: 999;
     background: #cecece;
@@ -142,7 +143,7 @@
     float: left;
 }
 
-.bigPlayer .paddingLayer .slider {
+.bigPlayer .paddingLayer .slider, .audioEmbed .track .slider {
     width: 18px;
     height: 7px;
     background: #707070;
@@ -229,12 +230,6 @@
     user-select: none;
 }
 
-.audioEmbed .track > div > div {
-    height: 100%;
-    width: 0%;
-    background-color: #BFBFBF;
-}
-
 #audioEmbed {
     user-select: none;
     background: #eee;
@@ -253,6 +248,10 @@
     background: #787878;
     border: 1px solid #4f4f4f;
     box-sizing: border-box;
+}
+
+.audioEntry.nowPlaying .playIcon {
+    background-position-y: -16px !important;
 }
 
 .audioEntry.nowPlaying:hover {
@@ -342,6 +341,8 @@
     position: absolute;
     right: 11%;
     top: 2px;
+    /* чтоб избежать заедания во время ховера кнопки добавления */
+    clip-path: inset(0 0 0 0);
 }
 
 .audioEntry .buttons .edit-icon {
@@ -359,6 +360,16 @@
     float: right;
     background-position: -80px -52px;
     margin-top: 3px;
+    margin-left: 2px;
+}
+
+.audioEntry .buttons .add-icon-group {
+    width: 14px;
+    height: 11px;
+    float: right;
+    background-position: -94px -52px;
+    margin-top: 3px;
+    transition: margin-right 0.1s ease-out, opacity 0.1s ease-out;
 }
 
 .audioEntry .buttons .report-icon {
@@ -384,8 +395,19 @@
     margin-top: 3px;
     width: 11px;
     height: 11px;
+    margin-left: 2px;
     float: right;
     background-position: -108px -52px;
+}
+
+.audioEntry .buttons .remove-icon-group {
+    margin-top: 3px;
+    width: 13px;
+    height: 11px;
+    float: right;
+    background-position: -122px -52px;
+    margin-left: 3px;
+    margin-right: 3px;
 }
 
 .audioEmbed .lyrics {
@@ -454,9 +476,18 @@
     height: 35px;
     padding-left: 10px;
     padding-right: 10px;
+    display: flex;
 }
 
 .ovk-diag-body .searchBox input {
+    height: 24px;
+    margin-right: -1px;
+    width: 77%;
+}
+
+.ovk-diag-body .searchBox select {
+    width: 29%;
+    padding-left: 8px;
     height: 24px;
 }
 
@@ -508,4 +539,24 @@
 .audioStatus {
     padding-top: 2px;
     padding-bottom: 3px;
+}
+
+/* <center> 🤣🤣🤣🤣🤣🤣🤣🤣🤣🤣*/
+.audiosContainer center span {
+    color: #707070;
+    margin: 120px 0px !important;
+    display: block;
+}
+
+.audiosContainer center {
+    margin-left: -10px;
+}
+
+.playlistInfo {
+    display: flex;
+    flex-direction: column;
+}
+
+.playlistInfo .playlistName {
+    font-weight: 600;
 }
