--- a/Web/static/css/audios.css
+++ b/Web/static/css/audios.css
@@ -163,6 +163,11 @@
     font-size: 10px;
 }
 
+.bigPlayer .paddingLayer .trackInfo b:hover {
+    text-decoration: underline;
+    cursor: pointer;
+}
+
 .music-app {
     display: grid;
 }
@@ -446,10 +451,9 @@
 }
 
 .playlistContainer {
-    display: flex;
-    flex-wrap: wrap;
-    margin-top: -15px;
-    margin-left: -30px;
+    display: grid;
+    grid-template-columns: repeat(3, 146px);
+    gap: 18px 10px;
 }
 
 .playlistContainer .playlistCover {
@@ -463,11 +467,6 @@
     max-width: 111px;
     max-height: 111px;
     margin: auto;
-}
-
-.playlistContainer .infObj {
-    margin-left: 39px;
-    margin-top: 19px;
 }
 
 .ovk-diag-body .searchBox {
