--- a/Web/static/css/main.css
+++ b/Web/static/css/main.css
@@ -2849,6 +2849,59 @@ body.article .floating_sidebar, body.article .page_content {
     font-size: 12px;
 }
 
+.sugglist {
+    padding-bottom: 5px;
+    padding-top: 5px;
+    margin-bottom: -5px;
+    padding-left: 9px;
+    border-top: 1px solid gray;
+    background-color: #e6e6e6;
+    margin-top: 5px;
+}
+
+.sugglist a {
+    color: #626262;
+}
+
+.suggestionControls {
+    text-align: center;
+}
+
+.button.loaded {
+    background: #595959 url("/assets/packages/static/openvk/img/loading_mini.gif") no-repeat 50% 50%;
+    padding: 2px 9px 7px 39px;
+    margin-bottom: -6px;
+}
+
+@-moz-document url-prefix() {
+    .button.loaded {
+        padding: 16px 40px 6px 4px !important;
+    }
+}
+
+.sugglist a:hover {
+    text-decoration: underline;
+}
+
+.sugglist a[data-toogled="true"] {
+    text-decoration: underline;
+    color:#4a4a4a;
+}
+
+.authorIcon {
+    height: 11px;
+    margin-top: 1px;
+    width: 10px;
+    float: left;
+    background: url("/assets/packages/static/openvk/img/person.png") no-repeat 0 0;
+}
+
+.authorName {
+    margin-left: 4px;
+    font-weight: normal !important;
+    font-size: 11px;
+}
+
 .topGrayBlock {
     background: #F0F0F0;
     height: 37px;
@@ -3002,3 +3055,4 @@ hr {
     background-repeat: no-repeat !important;
     background-position: 50% !important;
 }
+
